implementación de frontend v8